--- a/mozevent/www/index.html
+++ b/mozevent/www/index.html
@@ -4,7 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
+    <!--Web fonts -->  
     <link href="https://fonts.googleapis.com/css?family=Open%20Sans%3A300" rel="stylesheet" type="text/css">
+    <!-- BACK-END DO APP : -->
+        <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+        <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+    <!-- -->
+
+      
+    <!--CSS -->  
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
